# meows

./: .dockerignore  .env.example  .gitignore  README.md  TODO.md  compose.yaml
collector/: .gitignore  README.md  examples.md  go.mod  go.sum
collector/cmd/server/: main.go
collector/docs/: docs.go  swagger.json  swagger.yaml
collector/internal/api/: dto.go  handlers.go  handlers_test.go  middleware.go  router.go
collector/internal/config/: config.go
collector/internal/crypto/: crypto.go
collector/internal/db/: db.go  models.go
collector/internal/gemini/: gemini.go
collector/internal/personalization/: curate.go  curation_repository.go  prompt.go  repository.go  service.go
collector/internal/profile/: profile_update.go
collector/internal/scheduler/: scheduler.go
collector/internal/source/: hackernews.go  hackernews_html_test.go  reddit.go  semantic_scholar.go  source.go  validation.go
crawler/: Cargo.toml  README.md  config.toml.example  reddit.example.toml  semantic_scholar.example.toml
crawler/src/: config.rs  filter.rs  lib.rs  main.rs  output.rs  reddit.rs  source.rs
crawler/src/source/: mod.rs  reddit.rs  semantic_scholar.rs
crawler/tests/: integration_test.rs
crawler/tests/fixtures/: reddit_hot.json  semantic_scholar_recs.json  semantic_scholar_search.json
docker/: Dockerfile.collector  Dockerfile.frontend
front/: .air.toml  .env.example  .gitignore  API_CONTRACTS.md  KNOWN_ISSUES.md  Makefile  QUICKSTART.md  README.md  go.mod  go.sum  package-lock.json  package.json  tailwind.config.js  test-toast.html
front/cmd/server/: main.go
(+43 files in other folders)
